[Linux & Windows] Fix overly dynamic hosted app title bar height

In hosted app windows extension browser action icons may exceed the vertical
size of the menu button causing the title bar to increase in size when shown.

This CL fixes the title bar height to ignore hosted app buttons other than
the menu button to ensure title bar height consistency.

Before: https://bugs.chromium.org/p/chromium/issues/attachment?aid=359771&signed_aid=KtAw0K1pvNkili8_InVRHg==&inline=1
After: https://bugs.chromium.org/p/chromium/issues/attachment?aid=359772&signed_aid=BomSSrucsiT4t0Ixn8hGdw==&inline=1

Bug: 885011

Change-Id: Iedcc6eeaaff649d106e5cd1e1c7be1cfe13047ef
Reviewed-on: https://chromium-review.googlesource.com/1242584
Commit-Queue: Alan Cutter <alancutter@chromium.org>
Reviewed-by: Bret Sepulveda <bsep@chromium.org>
Cr-Commit-Position: refs/heads/master@{#594662}
Former-commit-id: 43526ef32411ad97ba0eb2dd16237e2f7090bfcb